<resources>
    <string name="app_name">System Info</string>

    <!-- Sign Up Activity -->
    <string name="signup_text">Sign Up</string>
    <string name="name_label">Name: </string>
    <string name="email_label">Email: </string>
    <string name="pswd_label">Password: </string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_redirect">Already have an account? Login</string>

    <!-- Login Activity -->
    <string name="login_text">Login</string>
    <string name="login_button">Login</string>
    <string name="login_redirect">Don\'t have an account? Sign Up</string>

    <!-- Home Activity -->
    <string name="home_text">Home</string>
    <string name="welcome_msg">Welcome </string>
    <string name="selected_category_label">Selected</string>

    <string name="model_label">Model</string>
    <string name="manufacturer_label">Manufacturer</string>
    <string name="brand_label">Brand</string>
    <string name="type_label">Type</string>

    <string name="level_label">Level</string>
    <string name="temperature_label">Temperature</string>
    <string name="status_label">Status</string>
    <string name="health_label">Health</string>

    <string name="total_ram_label">Total RAM</string>
    <string name="available_ram_label">Available RAM</string>
    <string name="total_storage_label">Total Storage</string>
    <string name="available_storage_label">Available Storage</string>

    <!-- Settings Activity -->
    <string name="settings_text">Settings</string>
    <string name="settings_system_category">System Category</string>
    <string-array name="categories">
        <item>Device</item>
        <item>Battery</item>
        <item>Memory</item>
    </string-array>


</resources>